@@ -5,13 +5,17 @@ changelog: https://github.com/wesnoth/wesnoth/blob/master/changelog
 Version 1.13.0-dev:
  * Language and i18n:
    * Updated translations: German, Scottish Gaelic, Slovak.
-   
+
  * Units:
    * Increased the experience requirement for the Rami from 32 to 39.
    * Increased the experience requirement for the Saree from 56 to 64.
-   
+
  * User interface:
    * Made orb and minmap colors configurable by the game preferences.
+
+ * Miscellaneous and bug fixes:
+   * Fixed halos glitching through locations that become shrouded after the
+     halo is rendered for the first time.
 
 
 Version 1.11.11:
