@@ -36,6 +36,8 @@ Version 1.13.0-dev:
      when the campaign is reloaded from a non-host side, or after a player rejoins
      from observer status. Hopefully, reloading campaigns is easier after this.
    * Fix bug #21797: "Mandatory WML child missing" when leaving a reloaded game.
+   * Fixed halos glitching through locations that become shrouded after the
+     halo is rendered for the first time.
 
 Version 1.11.11:
  * Add-ons server:
